# bo-ipopt-examples

./: .gitignore  README.md  butane_heat_pump.py  combined_hthp_effect.py  combined_hthp_three_effect.py  evaporator.py  evaporator_manual_scaling.py  hthp.py  pyproject.toml  steam_system.py  steam_system_scaled_graph.html
helper_methods/: generate_graph.py  setup_optimisation.py  steam_system_scaling.py
models/: butane_heat_pump.json  butane_heat_pump_updated.json  evaporator.json  evaporator_dsi.json  hthp.json  hthp_three_effects.json  hthp_two_effects.json  hthp_with_effect.json  model_effect_with_recycle.json  model_only_effects_no_recycles.json  model_only_effects_with_recycles.json  model_only_mvrs.json  model_only_mvrs_no_recycles.json  model_without_cow_pumps.json  optimisation_degrees_of_freedom.json  steam_system.json
