[project]
name = "bo-ipopt-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ahuora-compounds@git+https://github.com/waikato-ahuora-smart-energy-systems/PropertyPackages.git@v0.0.29",
    "ahuora-builder-types==0.1.9",
    "ahuora-builder==0.1.9",
]
